--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
     "prefer-stable": true,
     "require": {
         "php": ">=5.4",
-        "guzzlehttp/guzzle": "5.2.0",
-        "simplepie/simplepie": "~1.3.1",
-        "j0k3r/php-readability": "~1.0",
-        "htmlawed/htmlawed": "~1.1.19",
-        "symfony/options-resolver": "~2.6.6"
+        "guzzlehttp/guzzle": "^5.2.0",
+        "simplepie/simplepie": "^1.3.1",
+        "j0k3r/php-readability": "^1.0",
+        "htmlawed/htmlawed": "^1.1.19",
+        "symfony/options-resolver": "^2.6.6"
     },
     "autoload": {
         "psr-4": { "FullText\\": "src/" }
