--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "simplepie/simplepie": "^1.3.1",
         "j0k3r/php-readability": "^1.0",
         "htmlawed/htmlawed": "^1.1.19",
-        "symfony/options-resolver": "^2.6.6"
+        "symfony/options-resolver": "^2.6.6",
+        "neitanod/forceutf8": "^1.4"
     },
     "autoload": {
         "psr-4": { "FullText\\": "src/" }
