Fix typo in package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "graby/graby",
+    "name": "j0k3r/graby",
     "license": "AGPL-3.0",
     "authors": [{
         "name": "Jeremy Benoist",
