--- a/composer.json
+++ b/composer.json
@@ -20,16 +20,17 @@
         "j0k3r/php-readability": "^1.0",
         "htmlawed/htmlawed": "^1.1.19",
         "symfony/options-resolver": "^2.6.6",
-        "symfony/finder": "^2.6.6",
         "neitanod/forceutf8": "^1.4",
         "monolog/monolog": "^1.13.1",
-        "j0k3r/graby-site-config": "*"
+        "j0k3r/graby-site-config": "dev-local"
     },
     "autoload": {
         "psr-4": { "Graby\\": "src/" }
     },
-    "scripts": {
-        "post-update-cmd": "Graby\\Composer\\Script::postUpdate",
-        "post-install-cmd": "Graby\\Composer\\Script::postUpdate"
-    }
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "/Users/j0k/Sites/github/graby-site-config"
+        }
+    ]
 }
