--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,14 @@ php:
     - 5.5
     - 5.6
     - nightly
-    - hhvm-nightly
+    - hhvm
 
 # run build against nightly but allow them to fail
 matrix:
     fast_finish: true
     allow_failures:
         - php: nightly
-        - php: hhvm-nightly
+        - php: hhvm
 
 # faster builds on new travis setup not using sudo
 sudo: false
