Add PDF text extract
It also try to find the PDF title.

Fix #12

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "symfony/options-resolver": "^2.6.6",
         "neitanod/forceutf8": "^1.4",
         "monolog/monolog": "^1.13.1",
-        "j0k3r/graby-site-config": "^1.0.0"
+        "j0k3r/graby-site-config": "^1.0.0",
+        "smalot/pdfparser": "~0.9.24"
     },
     "autoload": {
         "psr-4": { "Graby\\": "src/" }
