--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require": {
         "php": ">=5.4",
         "guzzlehttp/guzzle": "^5.2.0",
-        "fin1te/safecurl": "dev-master",
+        "j0k3r/safecurl": "1.1.1",
         "simplepie/simplepie": "^1.3.1",
         "j0k3r/php-readability": "^1.0",
         "htmlawed/htmlawed": "^1.1.19",
@@ -28,5 +28,11 @@
     },
     "autoload": {
         "psr-4": { "Graby\\": "src/" }
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/j0k3r/safecurl"
+        }
+    ]
 }
