--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require": {
         "php": ">=5.4",
         "guzzlehttp/guzzle": "^5.2.0",
-        "j0k3r/safecurl": "1.1.1",
+        "j0k3r/safecurl": "~2.0",
         "simplepie/simplepie": "^1.3.1",
         "j0k3r/php-readability": "^1.0",
         "htmlawed/htmlawed": "^1.1.19",
