--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "prefer-stable": true,
     "require": {
         "php": ">=5.4",
+        "ext-curl": "*",
         "guzzlehttp/guzzle": "^5.2.0",
         "j0k3r/safecurl": "~2.0",
         "simplepie/simplepie": "^1.3.1",
