--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,14 @@ php:
     - 5.4
     - 5.5
     - 5.6
-    - nightly
+    - 7.0
     - hhvm
 
 # run build against nightly but allow them to fail
 matrix:
     fast_finish: true
     allow_failures:
-        - php: nightly
+        - php: 7.0
         - php: hhvm
 
 # faster builds on new travis setup not using sudo
