--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,9 @@
         "monolog/monolog": "^1.13.1",
         "smalot/pdfparser": "~0.9.24"
     },
+    "require-dev": {
+        "satooshi/php-coveralls": "~0.6"
+    },
     "autoload": {
         "psr-4": { "Graby\\": "src/" }
     }
