--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ before_install:
     - composer self-update
 
 install:
-    - composer install --no-interaction
+    - composer install --no-interaction --prefer-dist -o
 
 script:
     - mkdir -p build/logs
