--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "symfony/options-resolver": "~2.6|~3.0",
         "neitanod/forceutf8": "^2.0",
         "monolog/monolog": "^1.13.1",
-        "smalot/pdfparser": "~0.9.24"
+        "smalot/pdfparser": "~0.9.24",
+        "true/punycode": "~2.0"
     },
     "require-dev": {
         "satooshi/php-coveralls": "~0.6"
