--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ php:
 # run build against nightly but allow them to fail
 matrix:
     fast_finish: true
+    allow_failures:
+        - php: hhvm
     # only one build will send the coverage, this'll speed up other one
     include:
         - php: 5.6
