--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,13 @@ php:
     - 7.0
     - 7.1
     - hhvm
+    - nightly
 
 # run build against nightly but allow them to fail
 matrix:
     fast_finish: true
     allow_failures:
+        - php: nightly
         - php: hhvm
     # only one build will send the coverage, this'll speed up other one
     include:
