--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "true/punycode": "~2.0"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "~2.0",
         "satooshi/php-coveralls": "~0.6",
         "symfony/phpunit-bridge": "~2.6|~3.0"
     },
