--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,6 @@
     "require": {
         "php": ">=5.4",
         "ext-curl": "*",
-        "guzzlehttp/guzzle": "^5.2.0",
         "j0k3r/safecurl": "~2.0",
         "j0k3r/php-readability": "^1.0",
         "j0k3r/graby-site-config": "^1.0",
@@ -26,12 +25,22 @@
         "monolog/monolog": "^1.13.1",
         "smalot/pdfparser": "~0.11",
         "wallabag/tcpdf": "^6.2",
-        "true/punycode": "~2.0"
+        "true/punycode": "~2.0",
+        "psr/http-message": "^1.0",
+        "php-http/client-implementation": "^1.0",
+        "php-http/httplug": "^1.0",
+        "php-http/message-factory": "^1.0",
+        "php-http/discovery": "^1.0",
+        "php-http/client-common": "^1.0",
+        "php-http/message": "^1.6@dev"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~2.0",
         "satooshi/php-coveralls": "~0.6",
-        "symfony/phpunit-bridge": "~2.6|~3.0"
+        "symfony/phpunit-bridge": "~2.6|~3.0",
+        "php-http/mock-client": "^1.0",
+        "php-http/guzzle5-adapter": "^1.0",
+        "guzzlehttp/psr7": "^1.0"
     },
     "autoload": {
         "psr-4": { "Graby\\": "src/" }
