Revert "Try to run test in travis with the php-http/client-common fork"
This reverts commit 588bd5f09c7654f542b28141daa904d6cb16e1e6.

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_install:
     - composer self-update
 
 install:
-    - composer install --no-interaction --prefer-source -o
+    - composer install --no-interaction --prefer-dist -o
 
 script:
     - mkdir -p build/logs
