--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,6 @@
         "email": "fivefilters@fivefilters.org",
         "role": "Developer (original version)"
     }],
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/aaa2000/client-common"
-        }
-    ],
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
@@ -36,7 +30,7 @@
         "php-http/httplug": "^1.0",
         "php-http/message-factory": "^1.0",
         "php-http/discovery": "^1.0",
-        "php-http/client-common": "dev-cookie-date as 1.4.x-dev",
+        "php-http/client-common": "^1.6@dev",
         "php-http/message": "^1.6@dev"
     },
     "require-dev": {
