--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
         "satooshi/php-coveralls": "~0.6",
         "symfony/phpunit-bridge": "~2.6|~3.0",
         "php-http/mock-client": "^1.0",
-        "php-http/guzzle5-adapter": "^1.0",
+        "php-http/guzzle5-adapter": "^1.0.1@dev",
         "guzzlehttp/psr7": "^1.0"
     },
     "autoload": {
