--- a/composer.json
+++ b/composer.json
@@ -36,16 +36,16 @@
         "php-http/httplug": "^1.0",
         "php-http/message-factory": "^1.0",
         "php-http/discovery": "^1.0",
-        "php-http/client-common": "^1.6@dev",
-        "php-http/message": "^1.6@dev",
-        "j0k3r/httplug-ssrf-plugin": "dev-init"
+        "php-http/client-common": "^1.6",
+        "php-http/message": "^1.6",
+        "j0k3r/httplug-ssrf-plugin": "^1.0@dev"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~2.0",
         "satooshi/php-coveralls": "~0.6",
         "symfony/phpunit-bridge": "~2.6|~3.0",
         "php-http/mock-client": "^1.0",
-        "php-http/guzzle5-adapter": "^1.0.1@dev",
+        "php-http/guzzle5-adapter": "^1.0.1",
         "guzzlehttp/psr7": "^1.0"
     },
     "autoload": {
