--- a/composer.json
+++ b/composer.json
@@ -44,5 +44,10 @@
     },
     "autoload": {
         "psr-4": { "Graby\\": "src/" }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-2.0": "2.0-dev"
+        }
     }
 }
