--- a/.travis.yml
+++ b/.travis.yml
@@ -5,19 +5,19 @@ php:
     - 5.6
     - 7.0
     - 7.1
-    - hhvm
+    - 7.2
     - nightly
 
 # run build against nightly but allow them to fail
 matrix:
     fast_finish: true
     allow_failures:
+        - php: 7.2
         - php: nightly
-        - php: hhvm
     # only one build will send the coverage, this'll speed up other one
     include:
         - php: 7.0
-          env: PHPUNIT_FLAGS="--coverage-clover build/logs/clover.xml" CS_FIXER=run
+          env: PHPUNIT_FLAGS="--coverage-clover coverage.clover" CS_FIXER=run
 
 # faster builds on new travis setup not using sudo
 sudo: false
@@ -40,5 +40,9 @@ script:
     - php vendor/bin/simple-phpunit -v $PHPUNIT_FLAGS
     - if [ "$CS_FIXER" = "run" ]; then php vendor/bin/php-cs-fixer fix --verbose --dry-run ; fi;
 
-after_script:
-    - if [[ "$PHPUNIT_FLAGS" != "" ]]; then php vendor/bin/coveralls -v; fi;
+after_success:
+    - |
+        if [[ "$PHPUNIT_FLAGS" != "" ]]; then
+            wget https://scrutinizer-ci.com/ocular.phar
+            php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+        fi
