Add a Guzzle 6 build

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ matrix:
     include:
         - php: 7.0
           env: PHPUNIT_FLAGS="--coverage-clover coverage.clover" CS_FIXER=run
+        - php: 7.0
+          env: GUZZLE6=run
 
 # faster builds on new travis setup not using sudo
 sudo: false
@@ -31,6 +33,8 @@ cache:
 before_install:
     - if [ -n "$GH_TOKEN" ]; then composer config github-oauth.github.com ${GH_TOKEN}; fi;
     - composer self-update
+    - if [ "$GUZZLE6" = "run" ]; then composer remove php-http/guzzle5-adapter --dev -n ; fi;
+    - if [ "$GUZZLE6" = "run" ]; then composer require php-http/guzzle6-adapter --dev -n ; fi;
 
 install:
     - composer install --no-interaction --prefer-dist -o
