--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,2 +1,11 @@
+filter:
+    paths:
+        - src/*
+    excluded_paths:
+        - 'log/*'
+        - 'vendor/*'
+        - 'tests/*'
+
 tools:
-    external_code_coverage: false
+    external_code_coverage:
+        timeout: 600
