Remove tests folder from Scrutinizer
We don’t need them to be tested by Scrutinizer since they won’t affect final user.

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,2 +1,10 @@
 tools:
     external_code_coverage: false
+filter:
+    paths:
+        - 'src/*'
+    excluded_paths:
+        - 'build/*'
+        - 'log/*'
+        - 'tests/*'
+        - 'vendor/*'
