--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ php:
     - 5.6
     - 7.0
     - 7.1
+    - 7.2
     - hhvm
     - nightly
 
@@ -15,6 +16,7 @@ matrix:
     allow_failures:
         - php: nightly
         - php: hhvm
+        - php: 7.2
     # only one build will send the coverage, this'll speed up other one
     include:
         - php: 7.0
