--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~2.0",
-        "satooshi/php-coveralls": "~0.6",
+        "php-coveralls/php-coveralls": "~0.6",
         "symfony/phpunit-bridge": "~2.6|~3.0"
     },
     "autoload": {
