--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "j0k3r/graby",
+    "name": "eudaco/graby",
     "description": "Graby helps you extract article content from web pages",
     "license": "MIT",
     "authors": [{
