--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ php:
 matrix:
     fast_finish: true
     allow_failures:
+        - php: 7.3
         - php: nightly
-        - php: hhvm
     # only one build will send the coverage, this'll speed up other one
     include:
         - php: 7.2
