--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "j0k3r/graby-site-config": "^1.0",
         "simplepie/simplepie": "^1.3.1",
         "fossar/htmlawed": "^1.2.4",
-        "symfony/options-resolver": "~2.6|~3.0",
+        "symfony/options-resolver": "~2.6|~3.0|~4.0",
         "monolog/monolog": "^1.13.1",
         "smalot/pdfparser": "~0.11",
         "wallabag/tcpdf": "^6.2",
