--- a/composer.json
+++ b/composer.json
@@ -14,32 +14,30 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=5.5",
+        "php": ">=7.1",
         "ext-curl": "*",
-        "j0k3r/php-readability": "^1.0",
+        "j0k3r/php-readability": "^1.1",
         "j0k3r/graby-site-config": "^1.0",
         "simplepie/simplepie": "^1.3.1",
         "fossar/htmlawed": "^1.2.4",
         "symfony/options-resolver": "~2.6|~3.0|~4.0",
         "monolog/monolog": "^1.13.1",
         "smalot/pdfparser": "~0.11",
-        "wallabag/tcpdf": "^6.2",
-        "true/punycode": "~2.0",
+        "wallabag/tcpdf": "^6.2.26",
+        "true/punycode": "~2.1",
         "psr/http-message": "^1.0",
-        "php-http/client-implementation": "^1.0",
-        "php-http/httplug": "^1.0",
-        "php-http/message-factory": "^1.0",
+        "php-http/httplug": "^2.0",
         "php-http/discovery": "^1.0",
-        "php-http/client-common": "^1.6",
-        "php-http/message": "^1.6",
-        "j0k3r/httplug-ssrf-plugin": "^1.0"
+        "php-http/client-common": "2.0.0-RC1",
+        "php-http/message": "^1.7",
+        "j0k3r/httplug-ssrf-plugin": "2.0.x-dev"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "~2.0",
+        "friendsofphp/php-cs-fixer": "~2.14",
         "symfony/phpunit-bridge": "~2.6|~3.0|~4.0",
-        "php-http/mock-client": "^1.0",
-        "php-http/guzzle6-adapter": "^1.0.1",
-        "guzzlehttp/psr7": "^1.0",
+        "php-http/mock-client": "^1.2",
+        "php-http/guzzle6-adapter": "^2.0",
+        "guzzlehttp/psr7": "^1.5",
         "php-coveralls/php-coveralls": "^2.0"
     },
     "extra": {
