--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "require": {
         "php": ">=7.1",
         "ext-curl": "*",
+        "ext-tidy": "*",
         "j0k3r/php-readability": "^1.1",
         "j0k3r/graby-site-config": "^1.0",
         "simplepie/simplepie": "^1.3.1",
