--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,7 @@ script:
     - mkdir -p build/logs
     - php vendor/bin/simple-phpunit -v $PHPUNIT_FLAGS
     - if [ "$CS_FIXER" = "run" ]; then php vendor/bin/php-cs-fixer fix --verbose --dry-run ; fi;
+    - if [ "$CS_FIXER" = "run" ]; then php vendor/bin/phpstan analyse src tests --no-progress --level 1 ; fi;
 
 after_success:
     - |
