--- a/composer.json
+++ b/composer.json
@@ -31,14 +31,14 @@
         "php-http/discovery": "^1.0",
         "php-http/client-common": "^2.0",
         "php-http/message": "^1.7",
-        "j0k3r/httplug-ssrf-plugin": "^2.0"
+        "j0k3r/httplug-ssrf-plugin": "^2.0",
+        "guzzlehttp/psr7": "^1.5"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~2.14",
         "symfony/phpunit-bridge": "~2.6|~3.0|~4.0",
         "php-http/mock-client": "^1.2",
         "php-http/guzzle6-adapter": "^2.0",
-        "guzzlehttp/psr7": "^1.5",
         "php-coveralls/php-coveralls": "^2.0",
         "phpstan/phpstan": "^0.11",
         "phpstan/phpstan-phpunit": "^0.11"
