Handle error using preg_* function when html is really too big

--- a/.editorconfig
+++ b/.editorconfig
@@ -14,3 +14,7 @@ insert_final_newline = false
 
 [*.test]
 insert_final_newline = false
+
+[*.html]
+insert_final_newline = false
+trim_trailing_whitespace = false
