--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "ext-curl": "*",
         "ext-tidy": "*",
         "j0k3r/php-readability": "^1.1",
-        "j0k3r/graby-site-config": "dev-master",
+        "j0k3r/graby-site-config": "^1.0",
         "simplepie/simplepie": "^1.3.1",
         "fossar/htmlawed": "^1.2.4",
         "symfony/options-resolver": "~2.6|~3.0|~4.0|~5.0",
