--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~2.14",
-        "symfony/phpunit-bridge": "~2.6|~3.0|~4.0",
+        "symfony/phpunit-bridge": "~2.6|~3.0|~4.0|^5.0",
         "php-http/mock-client": "^1.2",
         "php-http/guzzle6-adapter": "^2.0",
         "php-coveralls/php-coveralls": "^2.0",
