--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "j0k3r/graby-site-config": "^1.0",
         "simplepie/simplepie": "^1.3.1",
         "fossar/htmlawed": "^1.2.4",
-        "symfony/options-resolver": "~2.6|~3.0|~4.0",
+        "symfony/options-resolver": "~2.6|~3.0|~4.0|~5.0",
         "monolog/monolog": "^1.13.1",
         "smalot/pdfparser": "~0.11",
         "true/punycode": "~2.1",
@@ -35,7 +35,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~2.14",
-        "symfony/phpunit-bridge": "~2.6|~3.0|~4.0",
+        "symfony/phpunit-bridge": "~2.6|~3.0|~4.0|^5.0",
         "php-http/mock-client": "^1.2",
         "php-http/guzzle6-adapter": "^2.0",
         "php-coveralls/php-coveralls": "^2.0",
