--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "simplepie/simplepie": "^1.3.1",
         "fossar/htmlawed": "^1.2.4",
         "symfony/options-resolver": "~2.6|~3.0|~4.0|~5.0",
-        "monolog/monolog": "^1.13.1",
+        "monolog/monolog": "^1.13.1|^2.0",
         "smalot/pdfparser": "~0.11",
         "true/punycode": "~2.1",
         "psr/http-message": "^1.0",
