--- a/composer.json
+++ b/composer.json
@@ -18,30 +18,29 @@
         "php": ">=7.1",
         "ext-curl": "*",
         "ext-tidy": "*",
-        "j0k3r/php-readability": "^1.1",
-        "j0k3r/graby-site-config": "^1.0",
-        "simplepie/simplepie": "^1.3.1",
-        "fossar/htmlawed": "^1.2.4",
-        "symfony/options-resolver": "~2.6|~3.0|~4.0|~5.0",
-        "monolog/monolog": "^1.13.1|^2.0",
-        "smalot/pdfparser": "~0.11",
-        "true/punycode": "~2.1",
-        "psr/http-message": "^1.0",
-        "php-http/httplug": "^2.0",
-        "php-http/discovery": "^1.0",
-        "php-http/client-common": "^2.0",
-        "php-http/message": "^1.7",
+        "fossar/htmlawed": "^1.2.7",
+        "guzzlehttp/psr7": "^1.5",
+        "j0k3r/graby-site-config": "^1.0.100",
         "j0k3r/httplug-ssrf-plugin": "^2.0",
-        "guzzlehttp/psr7": "^1.5"
+        "j0k3r/php-readability": "^1.2.3",
+        "monolog/monolog": "^1.18.0|^2.0",
+        "php-http/client-common": "^2.0",
+        "php-http/discovery": "^1.5",
+        "php-http/httplug": "^2.0",
+        "php-http/message": "^1.7",
+        "simplepie/simplepie": "^1.5",
+        "smalot/pdfparser": "^0.15.1",
+        "symfony/options-resolver": "^3.4|^4.0|^5.0",
+        "true/punycode": "^2.1"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "~2.14",
-        "symfony/phpunit-bridge": "~2.6|~3.0|~4.0|^5.0",
-        "php-http/mock-client": "^1.2",
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "guzzlehttp/guzzle": "^6.3.0",
         "php-http/guzzle6-adapter": "^2.0",
-        "php-coveralls/php-coveralls": "^2.0",
-        "phpstan/phpstan": "^0.11",
-        "phpstan/phpstan-phpunit": "^0.11"
+        "php-http/mock-client": "^1.3",
+        "phpstan/phpstan": "^0.12",
+        "phpstan/phpstan-phpunit": "^0.12",
+        "symfony/phpunit-bridge": "^5.1"
     },
     "extra": {
         "branch-alias": {
@@ -57,5 +56,8 @@
         "psr-4": {
             "Tests\\Graby\\": "tests/"
         }
+    },
+    "config": {
+        "sort-packages": true
     }
 }
