--- a/phpstan.neon
+++ b/phpstan.neon
@@ -5,19 +5,19 @@ includes:
 parameters:
     # https://github.com/phpstan/phpstan/issues/694#issuecomment-350724288
     autoload_files:
-        - vendor/bin/.phpunit/phpunit-7.4-0/vendor/autoload.php
+        - vendor/bin/.phpunit/phpunit-8.3-0/vendor/autoload.php
 
     ignoreErrors:
         # because we check for some HTTP client to exist or not (Guzzle 5/6 & cURL)
         -
-            message: '#Instantiated class (.*) not found.#'
-            path: %currentWorkingDirectory%/tests/Extractor/HttpClientTest.php
-        -
             message: '#Http\\Adapter\\Guzzle5\\Client\\|Http\\Adapter\\Guzzle6\\Client\\|Http\\Client\\Curl\\Client given#'
             path: %currentWorkingDirectory%/tests/Extractor/HttpClientTest.php
-        # because DOMXpath->query can return false
+        # we don't want to BC by defining typehint everywhere
+        # TODO: remove when jumping to 3.0
         -
-            message: '#between false and DOMNodeList will always evaluate to false#'
-            path: %currentWorkingDirectory%/src/Extractor/ContentExtractor.php
+            message: '#typehint specified.#'
+            path: %currentWorkingDirectory%/src/
 
     inferPrivatePropertyTypeFromConstructor: true
+    checkMissingIterableValueType: false
+    checkGenericClassInNonGenericObjectType: false
