Use new Scrutinizer engine
And avoid double Travis build

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -9,3 +9,10 @@ filter:
         - 'log/*'
         - 'tests/*'
         - 'vendor/*'
+
+build:
+    nodes:
+        analysis:
+            tests:
+                override:
+                    - php-scrutinizer-run
