--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ dist: xenial
 os: linux
 language: php
 
+# avoid double Travis build when the PR is created on upstream
+if: |
+    type = pull_request OR \
+    branch = master
+
 php:
     - 7.1
     - 7.4
