--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,13 @@
         "ext-curl": "*",
         "ext-tidy": "*",
         "fossar/htmlawed": "^1.2.7",
-        "guzzlehttp/psr7": "^1.5",
-        "j0k3r/graby-site-config": "^1.0.100",
+        "http-interop/http-factory-guzzle": "^1.0",
+        "j0k3r/graby-site-config": "^1.0.110",
         "j0k3r/httplug-ssrf-plugin": "^2.0",
         "j0k3r/php-readability": "^1.2.3",
         "monolog/monolog": "^1.18.0|^2.0",
-        "php-http/client-common": "^2.0",
-        "php-http/discovery": "^1.5",
+        "php-http/client-common": "^2.2",
+        "php-http/discovery": "^1.6",
         "php-http/httplug": "^2.0",
         "php-http/message": "^1.7",
         "simplepie/simplepie": "^1.5",
@@ -38,7 +38,9 @@
         "guzzlehttp/guzzle": "^6.3.0",
         "php-http/guzzle6-adapter": "^2.0",
         "php-http/mock-client": "^1.3",
+        "phpstan/extension-installer": "^1.0",
         "phpstan/phpstan": "^0.12",
+        "phpstan/phpstan-deprecation-rules": "^0.12",
         "phpstan/phpstan-phpunit": "^0.12",
         "symfony/phpunit-bridge": "^5.1"
     },
