--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,8 +1,9 @@
-includes:
-    - vendor/phpstan/phpstan-phpunit/extension.neon
-    - vendor/phpstan/phpstan-phpunit/rules.neon
-
 parameters:
+    level: 7
+    paths:
+        - src
+        - tests
+
     # https://github.com/phpstan/phpstan/issues/694#issuecomment-350724288
     autoload_files:
         - vendor/bin/.phpunit/phpunit-8.3-0/vendor/autoload.php
