--- a/.travis.yml
+++ b/.travis.yml
@@ -31,14 +31,17 @@ cache:
         - $HOME/.composer/cache/files
 
 before_install:
+    # install stuff before removing / adding new deps
+    - composer install --prefer-dist --no-progress --no-suggest -o
+
     - if [ -n "$GH_TOKEN" ]; then composer config github-oauth.github.com ${GH_TOKEN}; fi;
 
     # because php-coveralls require Guzzle 6
     - if [ "$GUZZLE5" = "run" ]; then composer remove guzzlehttp/guzzle php-http/guzzle6-adapter --dev -n ; fi;
-    - if [ "$GUZZLE5" = "run" ]; then composer require php-http/guzzle5-adapter '^2.0' --dev -n ; fi;
+    - if [ "$GUZZLE5" = "run" ]; then composer require php-http/guzzle5-adapter --dev -n ; fi;
 
     - if [ "$CURL" = "run" ]; then composer remove php-http/guzzle6-adapter --dev -n ; fi;
-    - if [ "$CURL" = "run" ]; then composer require php-http/curl-client '2.x-dev' --dev -n ; fi;
+    - if [ "$CURL" = "run" ]; then composer require php-http/curl-client --dev -n ; fi;
     - if [ "$CURL" = "run" ]; then composer require zendframework/zend-diactoros --dev -n ; fi;
 
 install:
