Ditch Travis to use GitHub Actions
But keep it only for PHP 8 because GA doesn't have an "allow failure"
feature

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,63 +8,25 @@ if: |
     branch = master
 
 php:
-    - 7.1
-    - 7.4
     - nightly
 
 jobs:
-    fast_finish: true
     allow_failures:
         - php: nightly
-    include:
-        - php: 7.3
-          env: PHPUNIT_FLAGS="--coverage-clover build/logs/clover.xml" CS_FIXER=run
-        - php: 7.2
-          env: GUZZLE5=run
-        - php: 7.2
-          env: GUZZLE7=run
-        - php: 7.2
-          env: CURL=run
-        - php: 7.2
-          env: COMPOSER_FLAGS="--prefer-lowest"
 
 cache:
     directories:
         - $HOME/.composer/cache/files
 
 before_install:
-    # install stuff before removing / adding new deps
-    - composer install --prefer-dist --no-progress --no-suggest -o
-
-    - if [ -n "$GH_TOKEN" ]; then composer config github-oauth.github.com ${GH_TOKEN}; fi;
-
-    - if [ "$GUZZLE5" = "run" ]; then composer remove guzzlehttp/guzzle php-http/guzzle6-adapter --dev -n ; fi;
-    - if [ "$GUZZLE5" = "run" ]; then composer require php-http/guzzle5-adapter --dev -n ; fi;
-
-    - if [ "$GUZZLE7" = "run" ]; then composer remove guzzlehttp/guzzle php-http/guzzle6-adapter --dev -n ; fi;
-    - if [ "$GUZZLE7" = "run" ]; then composer require php-http/guzzle7-adapter --dev -n ; fi;
-
-    - if [ "$CURL" = "run" ]; then composer remove php-http/guzzle6-adapter --dev -n ; fi;
-    - if [ "$CURL" = "run" ]; then composer require php-http/curl-client --dev -n ; fi;
-    - if [ "$CURL" = "run" ]; then composer require zendframework/zend-diactoros --dev -n ; fi;
+    - composer config github-oauth.github.com ${GH_TOKEN}
 
 install:
-    - composer update --prefer-dist --no-progress --no-suggest -o $COMPOSER_FLAGS
+    - composer update --prefer-dist --no-progress -o
 
 before_script:
     - echo 'date.timezone = "Europe/Paris"' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
 
 script:
     - mkdir -p build/logs
-    - php vendor/bin/simple-phpunit -v $PHPUNIT_FLAGS
-    - if [ "$CS_FIXER" = "run" ]; then php vendor/bin/php-cs-fixer fix --verbose --dry-run ; fi;
-    - if [ "$CS_FIXER" = "run" ]; then php vendor/bin/phpstan analyse ; fi;
-
-after_success:
-    - |
-        if [[ "$PHPUNIT_FLAGS" != "" ]]; then
-            wget https://github.com/php-coveralls/php-coveralls/releases/download/v2.4.2/php-coveralls.phar
-            chmod +x php-coveralls.phar
-
-            php php-coveralls.phar -v -x build/logs/clover.xml
-        fi
+    - php vendor/bin/simple-phpunit -v
