--- a/.editorconfig
+++ b/.editorconfig
@@ -18,3 +18,6 @@ insert_final_newline = false
 [*.html]
 insert_final_newline = false
 trim_trailing_whitespace = false
+
+[.github/**.yml]
+indent_size = 2
