--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
+/.github export-ignore
+/tests export-ignore
 /.editorconfig export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
@@ -5,5 +7,4 @@
 /.scrutinizer.yml export-ignore
 /.travis.yml export-ignore
 /phpunit.xml export-ignore
-/tests export-ignore
 /phpstan.neon export-ignore
