--- a/phpstan.neon
+++ b/phpstan.neon
@@ -4,8 +4,7 @@ parameters:
         - src
         - tests
 
-    # https://github.com/phpstan/phpstan/issues/694#issuecomment-350724288
-    autoload_files:
+    bootstrapFiles:
         - vendor/bin/.phpunit/phpunit-8.3-0/vendor/autoload.php
 
     ignoreErrors:
