Add support of site-config's wrap_in()
Fixes #180

Signed-off-by: Kevin Decherf <kevin@kdecherf.com>

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -17,6 +17,10 @@ parameters:
         -
             message: '#typehint specified.#'
             path: %currentWorkingDirectory%/src/
+        # phpstan does not seem to recognize the class override for JSLikeHTMLElement
+        -
+            message: '#Call to an undefined method DOMElement::setInnerHtml\(\)#'
+            path: %currentWorkingDirectory%/src/Extractor/ContentExtractor.php
 
     inferPrivatePropertyTypeFromConstructor: true
     checkMissingIterableValueType: false
