--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,8 @@
         "php-http/httplug": "^2.2",
         "php-http/message": "^1.9",
         "simplepie/simplepie": "^1.5",
-        "smalot/pdfparser": "^1.0",
-        "symfony/options-resolver": "^3.4|^4.4|^5.3",
+        "smalot/pdfparser": "^2.0",
+        "symfony/options-resolver": "^3.4|^4.4|^5.3|^6.0",
         "true/punycode": "^2.1"
     },
     "require-dev": {
@@ -39,10 +39,10 @@
         "php-http/guzzle6-adapter": "^2.0",
         "php-http/mock-client": "^1.4",
         "phpstan/extension-installer": "^1.0",
-        "phpstan/phpstan": "^0.12",
-        "phpstan/phpstan-deprecation-rules": "^0.12",
-        "phpstan/phpstan-phpunit": "^0.12",
-        "symfony/phpunit-bridge": "^5.3"
+        "phpstan/phpstan": "^1.2",
+        "phpstan/phpstan-deprecation-rules": "^1.0",
+        "phpstan/phpstan-phpunit": "^1.0",
+        "symfony/phpunit-bridge": "^5.4"
     },
     "extra": {
         "branch-alias": {
