Allow Guzzle 7 & psr7 2.0
Raise minimum version of all deps

--- a/composer.json
+++ b/composer.json
@@ -18,26 +18,25 @@
         "php": ">=7.4",
         "ext-curl": "*",
         "ext-tidy": "*",
-        "fossar/htmlawed": "^1.2.7",
-        "http-interop/http-factory-guzzle": "^1.0",
-        "j0k3r/graby-site-config": "^1.0.110",
+        "fossar/htmlawed": "^1.2.8",
+        "guzzlehttp/psr7": "^2.0",
+        "j0k3r/graby-site-config": "^1.0.141",
         "j0k3r/httplug-ssrf-plugin": "^2.0",
-        "j0k3r/php-readability": "^1.2.3",
-        "monolog/monolog": "^1.18.0|^2.0",
-        "php-http/client-common": "^2.3",
-        "php-http/discovery": "^1.12",
+        "j0k3r/php-readability": "^1.2.9",
+        "monolog/monolog": "^1.18.0|^2.3",
+        "php-http/client-common": "^2.5",
+        "php-http/discovery": "^1.14",
         "php-http/httplug": "^2.2",
-        "php-http/message": "^1.9",
+        "php-http/message": "^1.12",
         "simplepie/simplepie": "^1.5",
         "smalot/pdfparser": "^2.0",
         "symfony/options-resolver": "^3.4|^4.4|^5.3|^6.0",
-        "true/punycode": "^2.1",
-        "guzzlehttp/psr7": "^1.5.0"
+        "true/punycode": "^2.1"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
-        "guzzlehttp/guzzle": "^6.3.0",
-        "php-http/guzzle6-adapter": "^2.0",
+        "guzzlehttp/guzzle": "^7.4",
+        "php-http/guzzle7-adapter": "^1.0",
         "php-http/mock-client": "^1.4",
         "phpstan/extension-installer": "^1.0",
         "phpstan/phpstan": "^1.2",
