--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "phpstan/phpstan": "^1.2",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
+        "rector/rector": "^0.12.11",
         "symfony/phpunit-bridge": "^6.0"
     },
     "autoload": {
@@ -53,6 +54,9 @@
         "psr-4": {
             "Tests\\Graby\\": "tests/"
         }
+    },
+    "scripts": {
+        "rector": "vendor/bin/rector process -c maintenance/rector.config.php"
     },
     "config": {
         "sort-packages": true
