Add rector rule for mocking fetches in tests
Currently only supports mocking single fetches.

--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
     },
     "autoload-dev": {
         "psr-4": {
+            "Maintenance\\Graby\\": "maintenance/",
             "Tests\\Graby\\": "tests/"
         }
     },
