composer: add useful maintenance scripts
Makes hacking on Graby more convenient.

(cherry picked from commit 8ce0ec6da70cfa993c261b6fe9a9e37492a2b00d)

--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,11 @@
             "Tests\\Graby\\": "tests/"
         }
     },
+    "scripts": {
+        "fix": "php-cs-fixer fix --verbose --diff",
+        "phpstan": "phpstan analyse --memory-limit 512M",
+        "test": "simple-phpunit -v"
+    },
     "config": {
         "sort-packages": true,
         "allow-plugins": {
