composer: add useful maintenance scripts
Makes hacking on Graby more convenient.

--- a/composer.json
+++ b/composer.json
@@ -58,8 +58,10 @@
         }
     },
     "scripts": {
+        "fix": "php-cs-fixer fix --verbose --diff",
         "phpstan": "phpstan analyse --memory-limit 512M",
-        "rector": "vendor/bin/rector process -c maintenance/rector.php"
+        "rector": "vendor/bin/rector process -c maintenance/rector.php",
+        "test": "simple-phpunit -v"
     },
     "config": {
         "sort-packages": true,
