--- a/.github/workflows/coding-standards.yml
+++ b/.github/workflows/coding-standards.yml
@@ -3,10 +3,12 @@ name: "CS"
 on:
   pull_request:
     branches:
-      - master
+      - "master"
+      - "2.x"
   push:
     branches:
-      - master
+      - "master"
+      - "2.x"
 
 jobs:
   coding-standards:
@@ -16,11 +18,11 @@ jobs:
     strategy:
       matrix:
         php:
-          - "7.3"
+          - "7.4"
 
     steps:
       - name: "Checkout"
-        uses: "actions/checkout@v2"
+        uses: "actions/checkout@v4"
 
       - name: "Install PHP"
         uses: "shivammathur/setup-php@v2"
@@ -33,7 +35,7 @@ jobs:
           COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: "Install dependencies with Composer"
-        uses: "ramsey/composer-install@v1"
+        uses: "ramsey/composer-install@v2"
 
       - name: "Run PHP CS Fixer"
         run: "php vendor/bin/php-cs-fixer fix --verbose --dry-run --format=checkstyle | cs2pr"
