--- a/phpstan.neon
+++ b/phpstan.neon
@@ -33,3 +33,4 @@ parameters:
 
     inferPrivatePropertyTypeFromConstructor: true
     checkMissingIterableValueType: false
+    checkGenericClassInNonGenericObjectType: false
