--- a/composer.json
+++ b/composer.json
@@ -18,20 +18,20 @@
         "php": ">=7.4",
         "ext-curl": "*",
         "ext-tidy": "*",
-        "fossar/htmlawed": "^1.2.8",
+        "fossar/htmlawed": "^1.3.3",
         "guzzlehttp/psr7": "^2.0",
-        "j0k3r/graby-site-config": "^1.0.147",
+        "j0k3r/graby-site-config": "^1.0.181",
         "j0k3r/httplug-ssrf-plugin": "^2.0",
         "j0k3r/php-readability": "^1.2.9",
         "monolog/monolog": "^1.18.0|^2.3",
-        "php-http/client-common": "^2.5",
-        "php-http/discovery": "^1.14",
-        "php-http/httplug": "^2.2",
-        "php-http/message": "^1.12",
+        "php-http/client-common": "^2.7",
+        "php-http/discovery": "^1.19",
+        "php-http/httplug": "^2.4",
+        "php-http/message": "^1.14",
         "psr/http-client-implementation": "^1.0",
         "simplepie/simplepie": "^1.8",
         "smalot/pdfparser": "^2.0",
-        "symfony/options-resolver": "^3.4|^4.4|^5.3|^6.0",
+        "symfony/options-resolver": "^3.4|^4.4|^5.3|^6.4|^7.0",
         "symfony/polyfill-intl-idn": "^1.26",
         "symfony/polyfill-php80": "^1.27"
     },
@@ -45,7 +45,7 @@
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
         "rector/rector": "^0.12.11",
-        "symfony/phpunit-bridge": "^6.0"
+        "symfony/phpunit-bridge": "^7.0.1"
     },
     "autoload": {
         "psr-4": {
