Fix analysis with newer PHPStan
This was prompted by upgrading PHPStan from 1.10.62 to 1.12.5:

- Remove redundant checks thanks to better `preg_match_all` typing.

- Assert that `preg_match` matched successfully before using the `$match` result in a test (it would be an empty array when the match failed).

- Replace deprecated `checkMissingIterableValueType` by `ignoreErrors` with an identifier.
    > ⚠️  You're using a deprecated config option checkMissingIterableValueType ⚠️️
    >
    > It's strongly recommended to remove it from your configuration file
    > and add the missing array typehints.
    >
    > If you want to continue ignoring missing typehints from arrays,
    > add missingType.iterableValue error identifier to your ignoreErrors:
    >
    > parameters:
    >	ignoreErrors:
    >		-
    >			identifier: missingType.iterableValue

- Bump minimum PHPStan version since we now rely on identifiers.

- Remove deprecated `checkGenericClassInNonGenericObjectType`, it does not look like it is actually needed any more.
    > ⚠️  You're using a deprecated config option checkGenericClassInNonGenericObjectType ⚠️️
    >
    > It's strongly recommended to remove it from your configuration file
    > and add the missing generic typehints.
    >
    > If you want to continue ignoring missing typehints from generics,
    > add missingType.generics error identifier to your ignoreErrors:
    >
    > parameters:
    >	ignoreErrors:
    >		-
    >			identifier: missingType.generics

- Assert for more precise `substr` return type on PHP < 8.0.

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -30,7 +30,7 @@ parameters:
         -
             message: '#expects DOMElement, DOMNode given#'
             path: %currentWorkingDirectory%/src/Graby.php
+        -
+            identifier: missingType.iterableValue
 
     inferPrivatePropertyTypeFromConstructor: true
-    checkMissingIterableValueType: false
-    checkGenericClassInNonGenericObjectType: false
