composer: prevent a lock file from being created
We are a library so creating a lockfile does not make sense for us.

Let’s configure Composer to stop it creating one:
https://getcomposer.org/doc/06-config.md#lock

This is supported since Composer 1.10.0.

--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,7 @@
         "test": "simple-phpunit -v"
     },
     "config": {
+        "lock": false,
         "sort-packages": true,
         "allow-plugins": {
             "phpstan/extension-installer": true,
